--- a/chrome.yaml
+++ b/chrome.yaml
@@ -23,7 +23,7 @@
         var: chrome_ver.stdout
     - name: Download chrome-driver
       get_url:
-        url: "https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/{{chrome_ver.stdout}}/linux64/chromedriver-linux64.zip"
+        url: "https://storage.googleapis.com/chrome-for-testing-public/{{chrome_ver.stdout}}/linux64/chromedriver-linux64.zip"
         dest: /tmp/
         mode: '0755'
     - name: install unzip
